blockml/test/valid/11_wherecalc_refs_calc/v25/v25d.dashboard
dashboard: v25d
title: 'sales'
reports:
- title: 'weekly'
  model: v25m
  select:
  - a.dim6
  type: 'table'
