blockml/test/errors/11_report/e96/e96d.dashboard
dashboard: e96d
title: 'sales'
fields:
- filter: category
  result: number

reports:
- title: 'overview'
  model: e96m
  listen_filters:
    category: unk.dim1  
  select:
  - a.dim1

